tests/invalid_inputs/parsing/multiple_const.cpp
// that that multiple const qualifiers are caught during parsing
const const int a;
